# git-partial.prototyping

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude/: todo.md
.claude/todo.d/: 2025-12-15-000-generate-manpage.md  2025-12-15-001-passthrough-to-git-commit.md  2025-12-18-001-commit-working.md
.github/workflows/: ci.yml
Formula/: git-commit-staged.rb
docs/: milestones.jsonschema.yaml
docs/adr/: README.md
docs/design.kb/: CLAUDE.md  discovered-constraints.jsonschema.yaml
docs/design.kb/discovered-constraints.kb/: bash-pid-changes-between-calls.md  path-qualified-commit-uses-working-copy.md
docs/design.kb/integration-patterns.kb/: CLAUDE.md  git-subcommand-discovery.md  isolated-index-commit-workflow.md
docs/dev/: mutation-testing.jsonschema.yaml
docs/dev/devlog/: 2025-12-15-remove-C-flag.md  (+7 more)
docs/devlog/: 2025-12-11-001-milestone-planning.md
docs/milestones.kb/: 010-single-session-core.md  020-multi-agent-persistence.md  030-production-hardening.md  040-polish.md
git-commit-staged/: Cargo.toml  build.rs
git-commit-staged/man/: git-commit-files.1  git-commit-staged.1  git-commit-working.1
git-commit-staged/src/: cli.rs  commit.rs  exec.rs  index.rs  lib.rs  lock.rs  main.rs  prepare.rs  unglobbed_path.rs
git-commit-staged/src/files/: cli.rs  main.rs
git-commit-staged/src/staged/: cli.rs  main.rs
git-commit-staged/src/tests/: mod.rs  path_matching.rs
git-commit-staged/src/working/: cli.rs
git-commit-staged/tests/: git_integration.rs  integration.rs  integration_files.rs  integration_working.rs
(+45 files in other folders)
