[package]
name = "git-commit-staged"
version = "0.1.0"
edition = "2024"

[lib]
name = "git_commit_staged"
path = "src/lib.rs"

[[bin]]
name = "git-commit-staged"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
git2.workspace = true
gix-path = "0.10.22"

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_mangen = "0.2"
